# news

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  protodep.toml  pyproject.toml  service.proto  setup.cfg  text_analysis_requirements.yml
.github/workflows/: destroy-review.yml  production.yml  review.yml  staging.yml
config/: default.yml  development.yml
proto/: news.proto
snapshots/mav.industrie.de/news/: fraesen-lernen-wie-die-weltmeister-en.md  fraesen-lernen-wie-die-weltmeister.md  fraesen-lernen-wie-die-weltmeister.yml
snapshots/www.devicemed.de/: chiron-group-uebernimmt-mecatis-und-erweitert-das-produktprogramm-a-955841-en.md  chiron-group-uebernimmt-mecatis-und-erweitert-das-produktprogramm-a-955841.md  chiron-group-uebernimmt-mecatis-und-erweitert-das-produktprogramm-a-955841.yml
snapshots/www.dgap.de/dgap/News/corporate/maschinenfabrik-berthold-hermle-hermle-ersten-halbjahr-von-coronapandemie-belastet/: ?newsID=1393025-en.md  ?newsID=1393025.md  ?newsID=1393025.yml
snapshots/www.econo.de/aktuelles/artikel/: hermle-hebt-die-prognose-an-8290-en.md  hermle-hebt-die-prognose-an-8290.md  hermle-hebt-die-prognose-an-8290.yml
snapshots/www.etmm-online.com/: maximum-precision-for-large-components-a-998077.md  maximum-precision-for-large-components-a-998077.yml
snapshots/www.mmsonline.com/products/: chirons-five-axis-dz-22-meant-for-high-speeds-and-precision.md  chirons-five-axis-dz-22-meant-for-high-speeds-and-precision.yml
snapshots/www.pressebox.de/pressemitteilung/maschinenfabrik-berthold-hermle-ag/Hermle-USA-investiert-3-Millionen-US-Dollar-in-die-Erweiterung-des-US-Hauptsitzes/boxid/: 1033170-en.md  1033170.md  1033170.yml
snapshots/www.suedkurier.de/ueberregional/wirtschaft/: tuttlinger-maschinenbauer-chiron-will-deutlich-stellen-streichen;art416,10568439-en.md  tuttlinger-maschinenbauer-chiron-will-deutlich-stellen-streichen;art416,10568439.md  tuttlinger-maschinenbauer-chiron-will-deutlich-stellen-streichen;art416,10568439.yml
snapshots/www.todaysmedicaldevelopments.com/product/: chiron-america-additive-manufacturing-cube.md  chiron-america-additive-manufacturing-cube.yml
src/: articles.py  news_processing.py  server.py
src/services/: articles.py  news.py  news_processing.py
src/test/: conftest.py  test_add_article.py  test_news.py
src/test/data/: chiron.csv
src/utils/: utils.py
